--- a/ReactComponents/package.json
+++ b/ReactComponents/package.json
@@ -2,14 +2,11 @@
   "name": "ChiApp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "index.ios.js",
+  "scripts": {},
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.12.4",
     "reflux": "^0.2.7"
   }
 }
